# LLM-knowledge-base

./: .dockerignore  .env  Cargo.toml  Dockerfile  README.md  docker-compose.yml  prometheus.yml
.github/workflows/: build.yml
knowledge-base/: .dockerignore  .gitignore  Cargo.toml  README.md  TODO.txt  cookies.txt  docker-compose.yml  login_response.json  upload_response_all.json
knowledge-base-ui/: .gitignore  README.md  middleware.ts  package-lock.json  package.json  tailwind.config.ts
knowledge-base-ui/src/app/: layout.tsx  page.tsx
knowledge-base-ui/src/app/chat/: page.tsx
knowledge-base-ui/src/app/documents/: page.tsx
knowledge-base-ui/src/app/documents/[id]/: page.tsx
knowledge-base-ui/src/app/login/: page.tsx
knowledge-base-ui/src/app/metrics/: page.tsx
knowledge-base-ui/src/app/profile/: page.tsx
knowledge-base-ui/src/app/register/: page.tsx
knowledge-base-ui/src/app/tasks/: page.tsx
knowledge-base-ui/src/app/upload/: page.tsx
knowledge-base-ui/src/app/users/: page.tsx
knowledge-base-ui/src/components/: DataTable.tsx  Sidebar.tsx  TopBar.tsx
knowledge-base-ui/src/hooks/: use-toast.ts
knowledge-base-ui/src/lib/: api.ts  auth.ts
knowledge-base/sql/dev_initial/: 01-create-schema.sql  02-dev-seed.sql
knowledge-base/src/: error.rs  log.rs  main.rs  open_telemetry.rs
knowledge-base/src/crypt/: mod.rs  token.rs
knowledge-base/src/dev_utils/: mod.rs
knowledge-base/src/model/: base.rs  chat.rs  documents.rs  manager.rs  mod.rs  task.rs  user.rs
knowledge-base/src/utils/: mod.rs  token.rs
knowledge-base/src/web/: mod.rs  routes_chat.rs  routes_document.rs  routes_fine_tune.rs  routes_login.rs  routes_register.rs  routes_statistics.rs  routes_task.rs
knowledge-base/tests/: quick_dev.rs
knowledge-base/tests/test_files/: Ioana.txt  Test.txt  climate_change_and_impact.txt  cloud_computing.txt  cybersecurity.md  data_structures_algorithms.md  nutrition_and_health.txt  principles_of_project_management.md
sql/dev_initial/: 00-recreate-db.sql  01-create-schema.sql
src/: config.rs  ctx.rs  error.rs  main.rs
src/crypt/: pwd.rs
src/dev_utils/: dev_db.rs
src/model/: base.rs  documents.rs  manager.rs  mock_clients.rs  mod.rs  task.rs  user.rs
src/utils/: mod.rs
src/web/: mod.rs  mw_auth.rs  routes_document.rs  routes_fine_tune.rs  routes_query_data.rs  routes_statistics.rs  routes_user.rs
tests/: desktop.ini  quick_dev.rs
tests/test_files/: multi1.md  multi1.txt  multi2.txt  sample_document.md  sample_document.txt
