[package]
name = "knowledge-base"
version = "0.1.0"
edition = "2021"

[workspace.lints.rust]
unsafe_code = "forbid"
unused = "allow"

[lints]
workspace = true

[dependencies]

tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "3"
axum = { version = "0.7", features = ["multipart"] }
tower-http = { version = "0.5", features = ["fs"] }
tower-cookies = "0.10"

lazy-regex = "3"
strum_macros = "0.25"
uuid = {version = "1", features = ["v4","fast-rng",]}
sanitize-filename = "0.5"
reqwest = { version = "0.11", features = ["json", "multipart", "cookies", "gzip", "brotli", "deflate"] }
log = "0.4.22"
env_logger = "0.11.6"

opentelemetry = { version = "0.19.0", features = ["rt-tokio", "trace"] }
opentelemetry-otlp = { version="0.12.0",  features = ["tonic", "metrics"] }
opentelemetry-semantic-conventions = { version="0.11.0" }

tracing = "0.1.37"
tracing-opentelemetry = "0.19.0"
tracing-subscriber = { version = "0.3.17"}
axum-prometheus = "0.8.0"

sqlx = { version = "0.6", features = ["runtime-tokio-rustls", "postgres", "uuid", "time"] }
sqlb = "0.3"
pdf-extract = "0.8.0"
rand = "0.8"
hmac = "0.12"
sha2 = "0.10"
base64-url = "2"
time = "0.3"
futures-util = "0.3.31"

[dev-dependencies]
anyhow = "1"
httpc-test = "0.1.1"